<resources>
    <string name="app_name">DonorApp</string>

    <!--BUTTONS-->
    <string name="loginBtn">Login</string>
    <string name="registerBtn">Register</string>
    <string name="donorBtn">Donor</string>
    <string name="charityBtn">Charity</string>
    <string name="submitBtn">Submit</string>
    <string name="postBtn">Post</string>
    <string name="bookBtn">Book</string>
    <string name="logoutButton">Logout</string>
    <string name="backButton">Back</string>
    <string name="quickAccessBtn">Quick Access</string>
    <string name="makeBookingBtn">Make Booking</string>

    <!--TEXT VIEWS-->
    <string name="usernameTV">Username</string>
    <string name="passwordTV">Password</string>
    <string name="homePageTV">Donor App</string>
    <string name="charityRegTV">Charity Registration</string>
    <string name="donorRegTV">Donor Registration</string>
    <string name="bookingPageTV">Booking Page</string>
    <string name="nameLabel">Name:</string>
    <string name="firstNameTV">First Name:</string>
    <string name="lastNameTV">Last Name:</string>
    <string name="emailLabel">Email Address:</string>
    <string name="statsTitle">User Statistics</string>
    <string name="donorSettingsTV">Donor Settings</string>
    <string name="charitySettingsTV">Charity Settings</string>
    <string name="donationCountLabel">Number of Donations:</string>
    <string name="charitiesCountLabel">Number of Charities Donated to:</string>
    <string name="orgNameTV">Organisation Name:</string>
    <string name="streetTV">Street:</string>
    <string name="suburbTV">Suburb:</string>
    <string name="postCodeTV">Postcode:</string>

    <!--HINTS-->
    <string name="firstNameHT">First Name:</string>
    <string name="lastNameHT">Last Name:</string>
    <string name="postcodeHT">Postcode:</string>
    <string name="organisationNameHT">Organisation Name:</string>
    <string name="streetHT">Street:</string>
    <string name="suburbHT">Suburb:</string>
    <string name="emailHT">Email:</string>
    <string name="passwordHT">Password:</string>
    <string name="confirmPasswordHT">Confirm Password:</string>
    <string name="timeHT">Time</string>
    <string name="dateHT">Date</string>
    <string name="longLatHT">Latitude/Longitude</string>
    <string name="additionalCommentsHT">Additional Comments</string>
    <string name="mapSearchHT">Search Here</string>
    <string name="searchHT">Search for a donation…</string>

    <!--HINTS-->
    <string name="usernameHint">username</string>
    <string name="passwordHint">password</string>

    <!--CONTENT DESCRIPTIONS-->
    <string name="appLogoCD">AAA Communications Logo</string>
    <string name="first_name">First Name:</string>
    <string name="company_name">Company Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="company_address">Company Address:</string>
    <string name="company_suburb">Company Suburb:</string>
    <string name="company_postcode">Company Postcode:</string>
    <string name="job_title">Job Title:</string>
    <string name="email_address">Email Address:</string>
    <string name="password">Password:</string>
    <string name="confirm_password">Confirm Password:</string>

    <!--SHARED PREFERENCES-->
    <string name="donationPrefsString">New Donation</string>
    <string name="imagePrefsString">imagePreferences</string>
    <string name="currentDonationString">currentDonation</string>
    <string name="numImagesString">numImages</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="locationPrefs">locationPrefs</string>
    <string name="latLongPrefs">latLongPrefs</string>
    <string name="userPrefs">userPrefs</string>
    <string name="userEmailPrefs">userEmailPrefs</string>
    <string name="userPasswordPrefs">userPasswordPrefs</string>
    <string name="userFirstNamePrefs">userFirstNamePrefs</string>
    <string name="userLastNamePrefs">userUserLastPrefs</string>
    <string name="no_data">No data found.</string>
    <string name="bookingTitle">Arrange a meeting for %s</string>

    <!--FORMATS-->
    <string name="dateFormat">
        %1$d
        %2$s
        %3$d
        %4$s
        %5$d
    </string>
    <string name="title_activity_maps">Map</string>

</resources>
