<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/PhoneET"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CharityRegistrationPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/charityRegTV"
            android:textColor="@color/white"
            android:textSize="36sp" /> <!--Charity title-->

        <EditText
            android:id="@+id/organisationNameET"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/organisationNameHT"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="20sp"
            tools:ignore="LabelFor"/> <!--Organisation Name-->

        <EditText
            android:id="@+id/streetNameET"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/streetHT"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textSize="20sp"
            tools:ignore="LabelFor"/> <!--Street Name-->

        <EditText
            android:id="@+id/suburbET"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/suburbHT"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textSize="20sp"
            tools:ignore="LabelFor"/> <!--Suburb-->

        <EditText
            android:id="@+id/postcodeET"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/postcodeHT"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textSize="20sp"
            tools:ignore="LabelFor"/> <!--Postcode-->

        <EditText
            android:id="@+id/emailET"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/emailHT"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            tools:ignore="LabelFor"/> <!--Email-->

        <EditText
            android:id="@+id/passwordET"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textSize="20sp"
            tools:ignore="LabelFor"
            tools:layout_editor_absoluteX="98dp"
            tools:layout_editor_absoluteY="209dp" /> <!--Password-->

        <EditText
            android:id="@+id/confirmPasswordET"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/confirmPasswordHT"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textSize="20sp"
            tools:ignore="LabelFor"/> <!--Confirm Password-->

        <Button
            android:id="@+id/button2"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/colorAltAccent"
            android:text="@string/submitBtn" /> <!--OK Button-->

    </LinearLayout>

</android.support.constraint.ConstraintLayout>