<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RequestView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@id/toolbar"
            layout="@layout/toolbar"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/titleTV"
                    android:layout_width="315dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/title"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:layout_marginTop="20dp"
                    tools:ignore="LabelFor" /> <!--Title-->

                <EditText
                    android:id="@+id/descriptionET"
                    android:layout_width="315dp"
                    android:layout_height="250dp"
                    android:background="@drawable/box"
                    android:gravity="start"
                    android:padding="5dp"
                    android:hint="@string/description"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:textSize="20sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    tools:ignore="LabelFor" /> <!--Description-->

                <Button
                    android:id="@+id/bookBtn"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="150dp"
                    android:layout_marginBottom="40dp"
                    android:background="@color/colorAltAccent"
                    android:text="@string/makeBookingBtn"/> <!--Post Button-->

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>