<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/padding"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2">
        </LinearLayout> <!--PADDING-->

            <ImageView
                android:id="@+id/imageView"
                android:layout_gravity="center"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_weight="2"
                android:background="@null"
                app:srcCompat="@mipmap/logo"
                android:contentDescription="@string/appLogoCD"/> <!--logo-->

        <LinearLayout
            android:id="@+id/padding2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5">
        </LinearLayout> <!--PADDING-->

        <EditText
            android:id="@+id/usernameET"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="#11000000"
            android:drawableStart="@drawable/ic_action_user"
            android:ems="10"
            android:hint="@string/usernameHint"
            android:inputType="textPersonName"
            android:textSize="16sp"
            android:layout_marginBottom="35dp"/> <!--username-->

        <EditText
            android:id="@+id/passwordET"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="#11000000"
            android:drawableStart="@drawable/ic_action_pass"
            android:ems="10"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"/> <!--password-->

        <LinearLayout
            android:id="@+id/padding3"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5">
        </LinearLayout> <!--PADDING-->

        <android.support.v7.widget.CardView
            android:id="@+id/loginCV"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="25dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:background="@null"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/loginButton"
                    android:layout_width="wrap_content"
                    android:background="@null"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textColor="@color/white"
                    android:text="@string/loginBtn"
                    android:textSize="18sp" />
            </RelativeLayout>
        </android.support.v7.widget.CardView> <!--login button-->

        <LinearLayout
            android:id="@+id/padding4"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
        </LinearLayout> <!--PADDING-->

    </LinearLayout> <!--logo, username, password and login button-->

</RelativeLayout>
